package model;

public enum Dificultad {
    FACIL,
    MEDIO,
    DIFICIL
}
