package model;

public interface Observador {
    void actualizar(String mensaje);
}

