package model;

public enum TipoIncentivo {
    RECOMPENSA,
    PENALIZACION
}
